# PerfectCameraDemo

./: README.md  camera  settings.gradle.kts
app/: build.gradle.kts
app/libs/: ZlwAudioRecorder-v1.08.aar
app/src/androidTest/java/com/example/perfectcamerademo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  ndkcamera.cpp  ndkcamera.h  object.h  yolo.cpp  yolo.h  yolo6.cpp  yoloface.cpp  yoloface.h  yoloseg.cpp  yoloseg.h  yolov6ncnn.cpp
app/src/main/java/com/example/perfectcamerademo/: 1.txt  App.kt  BoundingBox.kt  Box.java  CameraFacing.kt  DrawImage.java  FrameInfo.java  KeyPoint.java  MainActivity.kt  MainActivity11.java  OnBitMapCallback.java  OpenCvDetector.kt  Point.java  SelfSurfaceView.kt  Skeleton.java  T.kt  TheActivity.java  TheActivity.kt  TrackView.kt  YUVConverter  Yolo6.java  Yolov6Ncnn.java  yyy.kt
app/src/main/java/com/example/perfectcamerademo/Kalman/: AvgUtils.kt  KalmanPro.kt  KalmanPy.kt  Main.kt  MatrixUtil.kt  Utils.kt
app/src/main/java/com/example/perfectcamerademo/audio/: AudioView.java  MainActivity.kt
app/src/main/java/com/example/perfectcamerademo/facedetect/: FaceDetect.kt
app/src/main/res/layout/: activity_audio.xml  activity_main.xml  activity_main11.xml  main.xml  the_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/perfectcamerademo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
